fixed navbar overflow

--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -3,16 +3,16 @@
   top: 0;
   left: 0;
   right: 0;
-  padding: 30px 0;
+  padding: 30px 50px;
   transition: 0.5s ease-out;
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   background: transparent;
   z-index: 10000;
   // width: 100%;
   &.navChange {
-    padding: 10px 0;
+    padding: 10px 50px;
     background: white;
     box-shadow: 0 4px 24px #333;
   }
